Fix collapsed label layouting

--- a/eclipse-scout-core/src/calendar/CalendarSidebarSplitter.less
+++ b/eclipse-scout-core/src/calendar/CalendarSidebarSplitter.less
@@ -44,6 +44,7 @@
   & > .collapsed-label {
     font-weight: @title-font-weight;
     color: @title-color;
+    padding-bottom: 2px;
     #scout.overflow-ellipsis();
 
     &:not(.disabled) {
